Cross product test

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div>
 
     <script src="lib/Detector.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="crossDot.js"></script>
 
 </body>
 
